--- a/cjl_trade_market/src/assets/css/common.css
+++ b/cjl_trade_market/src/assets/css/common.css
@@ -35,6 +35,16 @@ i,
 em {
   font-style: normal;
 }
+/* 清除浮动 */
+.clearfix:after {
+  content: "";
+  height: 0;
+  line-height: 0;
+  display: block;
+  visibility: hidden;
+  clear: both;
+  zoom: 1;
+}
 /*相对定位*/
 .p-rel {
   position: relative;
