--- a/cjl_trade_market/src/assets/css/common.css
+++ b/cjl_trade_market/src/assets/css/common.css
@@ -138,6 +138,7 @@ button {
   border: 1px solid transparent;
   background: none;
   border-radius: 0;
+  letter-spacing: 2px;
   outline: none;
   font-family: "microsoft yahei";
   cursor: pointer;
@@ -244,24 +245,24 @@ button[disabled] {
 
 /* 滚动条样式 */
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 0;
+  height: 0;
   background-color: #f5f5f5;
-  border-radius: 8px;
+  border-radius: 0;
 }
 
 /*定义滚动条轨道 内阴影+圆角*/
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
   background-color: hsla(215, 17%, 59%, 0.5);
-  border-radius: 8px;
+  border-radius: 0;
 }
 
 /*定义滑块 内阴影+圆角*/
 ::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
   background-color: hsla(215, 17%, 59%, 0.5);
-  border-radius: 8px;
+  border-radius: 0;
 }
 
 /* 缩虐图尺寸 --rounded 圆形*/
