--- a/cjl_trade_market/src/assets/css/common.css
+++ b/cjl_trade_market/src/assets/css/common.css
@@ -14,6 +14,11 @@ html {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
     "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
+@media screen and (max-width: 1440px) {
+  html {
+    font-size: 12px;
+  }
+}
 body {
   min-width: 1366px;
   height: 100%;
@@ -244,8 +249,8 @@ button[disabled] {
 
 /* 滚动条样式 */
 ::-webkit-scrollbar {
-  width: 0;
-  height: 0;
+  width: 4px;
+  height: 4px;
   background-color: #f5f5f5;
   border-radius: 0;
 }
