--- a/trade_new/src/assets/css/header/headerDefault.scss
+++ b/trade_new/src/assets/css/header/headerDefault.scss
@@ -4,6 +4,9 @@
   .hd-body {
     background: $main-bg-color;
   }
+  .nav-inner {
+    padding: 0 30px;
+  }
   .nav-bar {
     a {
       color: #fff;
