--- a/trade_new/src/assets/css/common.css
+++ b/trade_new/src/assets/css/common.css
@@ -20,7 +20,7 @@ html {
   }
 }
 body {
-  min-width: 1366px;
+  min-width: 1440px;
   height: 100%;
   background-color: #fff;
   color: #333;
@@ -147,6 +147,7 @@ button {
   font-family: "microsoft yahei";
   cursor: pointer;
   text-align: center;
+  border-radius: 2px;
 }
 button.btn-bordered {
   border-color: #e5e5e5;
@@ -155,9 +156,6 @@ button.btn-large {
   height: 40px;
   line-height: 38px;
   font-size: 16px;
-}
-button:hover {
-  background: none;
 }
 
 button.btn-block {
@@ -186,23 +184,7 @@ button.btn-radius {
 button.btn-active:active {
   opacity: 0.9;
 }
-button.btn-hover:hover {
-  opacity: 0.9;
-}
 
-button.btn-default {
-  background-color: #fff;
-  color: #333;
-  border-color: #eee;
-}
-button.btn-danger {
-  background-color: #ab1e24;
-  color: #fff;
-}
-button.btn-success {
-  background-color: #4fa56d;
-  color: #fff;
-}
 .color-primary {
   color: #ab1e24;
 }
@@ -249,24 +231,24 @@ button[disabled] {
 
 /* 滚动条样式 */
 ::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
+  width: 8px;
+  height: 8px;
   background-color: #f5f5f5;
-  border-radius: 0;
+  border-radius: 8px;
 }
 
 /*定义滚动条轨道 内阴影+圆角*/
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
   background-color: hsla(215, 17%, 59%, 0.5);
-  border-radius: 0;
+  border-radius: 8px;
 }
 
 /*定义滑块 内阴影+圆角*/
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
   background-color: hsla(215, 17%, 59%, 0.5);
-  border-radius: 0;
+  border-radius: 8px;
 }
 
 /* 缩虐图尺寸 --rounded 圆形*/
