--- a/vic_tribe/src/assets/css/common.css
+++ b/vic_tribe/src/assets/css/common.css
@@ -1,21 +1,30 @@
 html {
   height: 100%;
   width: 100%;
-  font-size: 62.5%;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
+  font-size: 10px;
   user-select: none;
   overflow: auto;
+  padding: 0;
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
     "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 body {
   height: 100%;
-  background-color: #fff;
+  background-color: #f5f5f5;
   color: #333;
+  padding: 0;
 }
-
+.app-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.app-body {
+  flex: 1;
+}
+.overflow-y {
+  overflow-y: scroll;
+}
 table th {
   font-weight: normal;
   color: #333;
@@ -27,7 +36,7 @@ img {
   display: inline-block;
 }
 i,
-em {
+rem {
   font-style: normal;
 }
 /* 清除浮动 */
@@ -81,35 +90,35 @@ em {
 }
 /* margin 10像素*/
 .m-top-10 {
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 .m-left-10 {
-  margin-left: 10px;
+  margin-left: 1rem;
 }
 .m-right-10 {
-  margin-right: 10px;
+  margin-right: 1rem;
 }
 .m-bottom-10 {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 .m-10 {
-  margin: 10px;
+  margin: 1rem;
 }
 /*字体大小*/
 .font-12 {
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 .font-14 {
-  font-size: 1.4em;
+  font-size: 1.4rem;
 }
 .font-16 {
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
 .font-18 {
-  font-size: 1.8em;
+  font-size: 1.8rem;
 }
 .font-20 {
-  font-size: 2em;
+  font-size: 2rem;
 }
 /* 字重 */
 .font-bit-bold {
@@ -120,86 +129,11 @@ em {
 }
 /*button 按钮样式*/
 input {
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -webkit-appearance: none;
+  appearance: none;
   outline: none;
   border: 1px solid transparent;
 }
-button {
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -webkit-appearance: none;
-  border: 1px solid transparent;
-  background: none;
-  border-radius: 0;
-  outline: none;
-  font-family: "microsoft yahei";
-  cursor: pointer;
-  text-align: center;
-}
-button.btn-bordered {
-  border-color: #e5e5e5;
-}
-button.btn-large {
-  height: 9em;
-  line-height: 8.8em;
-  font-size: 1.6em;
-}
-button:hover {
-  background: none;
-}
 
-button.btn-block {
-  display: block;
-  width: 100%;
-}
-
-button.btn-inline {
-  display: inline-block;
-}
-button.btn-small {
-  height: 4.5em;
-  line-height: 4.3em;
-  font-size: 1.4em;
-  width: 80px;
-}
-button.btn-mini {
-  height: 3em;
-  width: 5em;
-  line-height: 2.8em;
-  font-size: 1.4em;
-}
-button.btn-radius {
-  border-radius: 2px;
-}
-button.btn-active:active {
-  opacity: 0.9;
-}
-button.btn-hover:hover {
-  opacity: 0.9;
-}
-button.btn-round {
-  border-radius: 10em;
-}
-button.btn-default {
-  background-color: #fff;
-  color: #333;
-  border-color: #eee;
-}
-button.btn-danger {
-  background-color: #ff5c5c;
-  color: #fff;
-}
-button.btn-success {
-  background-color: #4fa56d;
-  color: #fff;
-}
-
-button[disabled] {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
 .fl {
   float: left;
 }
@@ -236,7 +170,10 @@ button[disabled] {
 .flex-v-center {
   align-items: center;
 }
-
+img {
+  border: none;
+  outline: none;
+}
 /* 滚动条样式 */
 ::-webkit-scrollbar {
   width: 0;
