--- a/vic_tribe/src/assets/css/common.css
+++ b/vic_tribe/src/assets/css/common.css
@@ -12,7 +12,14 @@ body {
   height: 100%;
   background-color: #f5f5f5;
   color: #333;
+  padding-top: constant(safe-area-inset-top);
+  padding-left: constant(safe-area-inset-left);
+  padding-right: constant(safe-area-inset-right);
+  padding-bottom: constant(safe-area-inset-bottom);
+}
+* {
   padding: 0;
+  margin: 0;
 }
 .app-main {
   display: flex;
@@ -119,6 +126,12 @@ rem {
 }
 .font-20 {
   font-size: 2rem;
+}
+.font-22 {
+  font-size: 2.2rem;
+}
+.font-24 {
+  font-size: 2.4rem;
 }
 /* 字重 */
 .font-bit-bold {
