--- a/trade_new_v1/src/assets/css/element-variable.scss
+++ b/trade_new_v1/src/assets/css/element-variable.scss
@@ -1,3 +1,6 @@
 $--color-primary: #2a79f5;
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
 @import "~element-ui/packages/theme-chalk/src/index";
+.el-input__inner {
+  border-radius: 0;
+}
