--- a/trade_new_v1/src/assets/css/common.scss
+++ b/trade_new_v1/src/assets/css/common.scss
@@ -154,11 +154,6 @@ em {
   font-weight: 600;
 }
 /*button 按钮样式*/
-input {
-  appearance: none;
-  outline: none;
-  border: 1px solid transparent;
-}
 button {
   appearance: none;
   border: none;
@@ -167,6 +162,10 @@ button {
   cursor: pointer;
   text-align: center;
   border-radius: 2px;
+}
+button.btn-border {
+  border-width: 1px;
+  border-style: solid;
 }
 button.btn-hover:hover {
   opacity: 0.9;
