--- a/binmark_trade_mobile/src/assets/css/variable.scss
+++ b/binmark_trade_mobile/src/assets/css/variable.scss
@@ -2,18 +2,8 @@ $bg-white: #fff;
 $main-bg-color: #f5f5f5;
 $hover-bg-color: #991c22;
 $color-success: #4fa56d;
-$color-danger: #ff4b58;
-$color-primary: #3388ff;
-$bg-dark: #333333;
-$color-dark: #333;
-$color-active: #333;
-$font: "PingFang SC";
-$font-mini: 1.2rem;
-$font-default: 1.4rem;
-$font-normal: 1.6rem;
-$font-middile: 1.8rem;
-$font-large: 2rem;
-$font-ex-large: 2.4rem;
+$color-danger: #b72026;
+$color-primary: #d0a771;
 $bd-size: 1rem;
 $bd-color: #e1e1e1;
 $default-border: $bd-size solid $bd-color;
@@ -27,9 +17,14 @@ $mask-bg-rgba: rgba(0, 0, 0, 0.6);
 .color-primary {
   color: $color-primary;
 }
+@for $i from 12 to 73 {
+  .font-#{$i} {
+    font-size: 1px * $i;
+  }
+}
 button {
   appearance: none;
-  border: none;
+  border: 1px solid transparent;
   background: none;
   border-radius: 0;
   outline: none;
@@ -79,16 +74,16 @@ button {
     color: #333;
     border-color: #eee;
   }
-  &.btn-dark {
-    background-color: $color-dark;
-    color: #fff;
-  }
   &.btn-success {
     background-color: $color-success;
     color: #fff;
   }
   &.btn-danger {
     background-color: $color-danger;
+    color: #fff;
+  }
+  &.btn-primary {
+    background-color: $color-primary;
     color: #fff;
   }
   &[disabled] {
