--- a/binmark_trade_mobile/src/assets/css/common.css
+++ b/binmark_trade_mobile/src/assets/css/common.css
@@ -10,7 +10,7 @@ html {
 }
 body {
   height: 100%;
-  background-color: #fff;
+  background-color: #f5f5f5;
   color: #333;
   padding-top: constant(safe-area-inset-top);
   padding-left: constant(safe-area-inset-left);
