--- a/binmark_trade_mobile/src/assets/css/common.css
+++ b/binmark_trade_mobile/src/assets/css/common.css
@@ -1,7 +1,7 @@
 html {
   height: 100%;
   width: 100%;
-  font-size: 10px;
+  font-size: 12px;
   user-select: none;
   overflow: auto;
   padding: 0;
@@ -43,7 +43,7 @@ img {
   display: inline-block;
 }
 i,
-rem {
+em {
   font-style: normal;
 }
 /* 清除浮动 */
@@ -117,12 +117,6 @@ rem {
 }
 .font-bold {
   font-weight: 600;
-}
-/*button 按钮样式*/
-input {
-  appearance: none;
-  outline: none;
-  border: 1px solid transparent;
 }
 
 .fl {
