--- a/binmark_trade_mobile/src/assets/css/variable.scss
+++ b/binmark_trade_mobile/src/assets/css/variable.scss
@@ -33,6 +33,11 @@ $mask-bg-rgba: rgba(0, 0, 0, 0.6);
     height: 5px * $i;
   }
 }
+input {
+  appearance: none;
+  outline: none;
+  border: 1px solid transparent;
+}
 button {
   appearance: none;
   border: 1px solid transparent;
@@ -47,7 +52,7 @@ button {
   &.btn-large {
     height: 4rem;
     line-height: 4rem;
-    font-size: 1.6rem;
+    font-size: 1.25rem;
   }
   &.btn-block {
     display: block;
@@ -59,14 +64,14 @@ button {
   &.btn-small {
     height: 3rem;
     line-height: 3rem;
-    font-size: 1.4rem;
+    font-size: 1rem;
     width: 8rem;
   }
   &.btn-mini {
-    height: 2rem;
+    height: 2.5rem;
     width: 5rem;
-    line-height: 2rem;
-    font-size: 1.4rem;
+    line-height: 2.4rem;
+    font-size: 1rem;
   }
   &.btn-radius {
     border-radius: 0.2rem;
