--- a/binmark_trade/static/css/common.css
+++ b/binmark_trade/static/css/common.css
@@ -142,6 +142,7 @@ html {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
     "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
+
 body {
   min-width: 1440px;
   height: 100%;
@@ -298,7 +299,7 @@ button.btn-small {
 }
 button.btn-mini {
   height: 28px;
-  width: 50px;
+  padding: 0 10px;
   line-height: 26px;
   font-size: 14px;
 }
