--- a/binmark_trade_mobile/src/assets/css/public.scss
+++ b/binmark_trade_mobile/src/assets/css/public.scss
@@ -1,3 +1,127 @@
+@for $i from 12 to 73 {
+  .font-#{$i} {
+    font-size: 1px * $i;
+  }
+}
+@for $i from 1 to 11 {
+  /*高度值*/
+  .h-#{$i*5} {
+    height: 5px * $i;
+  }
+  /* 缩虐图尺寸 --rounded 圆形*/
+  .thumb-#{$i*5} {
+    width: 5px * $i;
+    height: 5px * $i;
+  }
+}
+.color-danger {
+  color: $color-danger;
+}
+.color-success {
+  color: $color-success;
+}
+.color-primary {
+  color: $color-primary;
+}
+input {
+  appearance: none;
+  outline: none;
+  border: none;
+}
+//点击波纹效果
+.riple {
+  position: relative;
+  //隐藏溢出的径向渐变背景
+  overflow: hidden;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    //设置径向渐变
+    background-image: radial-gradient(circle, #ccc 10%, transparent 10.01%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(10, 10);
+    opacity: 0;
+    transition: transform 0.3s, opacity 0.5s;
+  }
+  &:active:after {
+    transform: scale(0, 0);
+    opacity: 0.3;
+    transition: 0s;
+  }
+}
+// 自定义button 按钮
+button {
+  appearance: none;
+  border: 1px solid transparent;
+  background: none;
+  border-radius: 0;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  &.btn-bordered {
+    border-color: #e5e5e5;
+  }
+  &.btn-large {
+    height: 4rem;
+    line-height: 4rem;
+    font-size: 1.25rem;
+  }
+  &.btn-block {
+    display: block;
+    width: 100%;
+  }
+  &.btn-inline {
+    display: inline-block;
+  }
+  &.btn-small {
+    height: 3rem;
+    line-height: 3rem;
+    font-size: 1rem;
+    width: 8rem;
+  }
+  &.btn-mini {
+    height: 2.5rem;
+    width: 5rem;
+    line-height: 2.4rem;
+    font-size: 1rem;
+  }
+  &.btn-radius {
+    border-radius: 0.2rem;
+  }
+  &.btn-round {
+    border-radius: 10rem;
+  }
+  &.btn-default {
+    background-color: #eee;
+    color: #333;
+    border-color: #eee;
+  }
+  &.btn-success {
+    background-color: $color-success;
+    color: #fff;
+  }
+  &.btn-danger {
+    background-color: $color-danger;
+    color: #fff;
+  }
+  &.btn-primary {
+    background-color: $color-primary;
+    color: #fff;
+  }
+  &[disabled] {
+    background-color: #cccccc;
+    color: #fff;
+    cursor: not-allowed;
+  }
+}
+// 个人中心样式
 .user-entry {
   .page-head {
     color: #eee;
@@ -45,6 +169,10 @@
 .van-nav-bar .van-icon {
   color: inherit;
 }
+.van-nav-bar__title {
+  font-weight: bold;
+}
+
 .van-tab,
 .van-tag--large {
   font-size: 1.25rem;
