--- a/binmark_trade_mobile/src/assets/css/variable.scss
+++ b/binmark_trade_mobile/src/assets/css/variable.scss
@@ -1,9 +1,8 @@
 $bg-white: #fff;
 $main-bg-color: #f5f5f5;
-$hover-bg-color: #991c22;
-$color-success: #4fa56d;
-$color-danger: #b72026;
-$color-primary: #d0a771;
+$color-success: #01aa3c;
+$color-danger: #ef2d0c;
+$color-primary: #fe0042;
 $bd-size: 1rem;
 $bd-color: #e1e1e1;
 $default-border: $bd-size solid $bd-color;
