--- a/mscoin_trade/src/assets/css/variable.scss
+++ b/mscoin_trade/src/assets/css/variable.scss
@@ -1,9 +1,9 @@
 $bg-white: #fff;
-$main-bg-color: #ab1e24;
-$hover-bg-color: #991c22;
-$color-success: #4fa56d;
-$color-danger: #ab1e24;
-$bg-dark: #1f262d;
+$main-bg-color: #a73031;
+$hover-bg-color: #fff;
+$color-success: #01aa3c;
+$color-danger: #ef2d0c;
+$bg-dark: #323c46;
 $main-font-color: #333;
 $input-height: 40px;
 $btn-height: 40px;
