移动端静态完成

--- a/binmark_trade_mobile/src/assets/css/public.scss
+++ b/binmark_trade_mobile/src/assets/css/public.scss
@@ -23,6 +23,9 @@
 .color-primary {
   color: $color-primary;
 }
+.color-info {
+  color: $color-info;
+}
 input,
 button {
   -webkit-appearance: none;
