--- a/binmark_trade_mobile/src/assets/css/variable.scss
+++ b/binmark_trade_mobile/src/assets/css/variable.scss
@@ -3,6 +3,7 @@ $main-bg-color: #f5f5f5;
 $color-success: #01aa3c;
 $color-danger: #ef2d0c;
 $color-primary: #fe0042;
+$color-info: #3388ff;
 $bd-size: 1rem;
 $bd-color: #e1e1e1;
 $default-border: $bd-size solid $bd-color;
