--- a/mscoin_trade/static/css/common.css
+++ b/mscoin_trade/static/css/common.css
@@ -2,6 +2,134 @@
   margin: 0;
   padding: 0;
 }
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+a {
+  text-decoration: none;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 html {
   height: 100%;
   width: 100%;
@@ -14,11 +142,7 @@ html {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
     "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
-@media screen and (max-width: 1440px) {
-  html {
-    font-size: 12px;
-  }
-}
+
 body {
   min-width: 1440px;
   height: 100%;
@@ -145,6 +269,7 @@ button {
   border-radius: 0;
   outline: none;
   font-family: "microsoft yahei";
+  color: inherit;
   cursor: pointer;
   text-align: center;
   border-radius: 2px;
@@ -174,7 +299,7 @@ button.btn-small {
 }
 button.btn-mini {
   height: 28px;
-  width: 50px;
+  padding: 0 10px;
   line-height: 26px;
   font-size: 14px;
 }
