--- a/vic_tribe/src/assets/css/variable.scss
+++ b/vic_tribe/src/assets/css/variable.scss
@@ -7,16 +7,26 @@ $bg-dark: #333333;
 $color-dark: #333;
 $color-active: #333;
 $font: "PingFang SC";
-$font-mini: 1.2rem;
-$font-default: 1.4rem;
-$font-normal: 1.6rem;
-$font-middile: 1.8rem;
-$font-large: 2rem;
-$font-ex-large: 2.4rem;
 $bd-size: 1rem;
 $bd-color: #e1e1e1;
 $default-border: $bd-size solid $bd-color;
 $mask-bg-rgba: rgba(0, 0, 0, 0.6);
+@for $i from 12 to 73 {
+  .font-#{$i} {
+    font-size: 1px * $i;
+  }
+}
+@for $i from 1 to 11 {
+  /*高度值*/
+  .h-#{$i*5} {
+    height: 5px * $i;
+  }
+  /* 缩虐图尺寸 --rounded 圆形*/
+  .thumb-#{$i*5} {
+    width: 5px * $i;
+    height: 5px * $i;
+  }
+}
 .color-danger {
   color: $color-danger;
 }
