--- a/vic_tribe/src/assets/css/common.css
+++ b/vic_tribe/src/assets/css/common.css
@@ -5,8 +5,9 @@ html {
   user-select: none;
   overflow: auto;
   padding: 0;
-  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial,
+    sans-serif;
+  text-size-adjust: none;
 }
 body {
   height: 100%;
