--- a/vic_tribe/static/css/common.css
+++ b/vic_tribe/static/css/common.css
@@ -242,3 +242,10 @@ img {
 .bg-#fff {
   background-color: #fff;
 }
+.no-data {
+  height: 40px;
+  line-height: 40px;
+  font-size: 14px;
+  color: #666;
+  text-align: center;
+}
