--- a/mscoin_trade/static/css/common.css
+++ b/mscoin_trade/static/css/common.css
@@ -104,9 +104,7 @@ nav,
 section {
   display: block;
 }
-body {
-  line-height: 1;
-}
+
 a {
   text-decoration: none;
 }
@@ -139,15 +137,16 @@ html {
   -ms-user-select: none;
   user-select: none;
   overflow: auto;
-  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial,
+    sans-serif;
 }
 
 body {
-  min-width: 1280px;
+  min-width: 1366px;
   height: 100%;
   background-color: #fff;
   color: #333;
+  line-height: 1;
 }
 
 table th {
@@ -244,6 +243,23 @@ em {
 }
 .font-20 {
   font-size: 20px;
+}
+@media screen and (max-width: 1366px) {
+  .font-12 {
+    font-size: 10px;
+  }
+  .font-14 {
+    font-size: 12px;
+  }
+  .font-16 {
+    font-size: 14px;
+  }
+  .font-18 {
+    font-size: 16px;
+  }
+  .font-20 {
+    font-size: 18px;
+  }
 }
 /* 字重 */
 .font-bit-bold {
